# create-flask-api-app

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/create-flask-api-app/: __main__.py  create.py
src/create_flask_api_app/: __main__.py  create.py
src/create_flask_api_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/create_flask_api_app/api_template/: README.md  app.py
src/create_flask_api_app/api_template/resources/: example.py
src/create_flask_api_app/api_template/src/: config.py  manage.py  server.py
src/create_flask_api_app/api_template/src/client/: superhero.py
src/create_flask_api_app/api_template/src/model/: abc.py  user.py
src/create_flask_api_app/api_template/src/resource/: user.py
src/create_flask_api_app/api_template/src/route/: common.py  user.py
src/create_flask_api_app/api_template/test/route/: test_user.py
src/create_flask_app.egg-info/: PKG-INFO  SOURCES.txt
