[metadata]
name = create-flask-api-app
version = 0.0.1
description = Creates python flask application template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ElvisRodriguez/create-flask-api-app
author = Elvis Rodriguez
author_email = elvisrodriguez1992@gmail.com
license = MIT
project_urls =
    Bug Tracker = https://github.com/ElvisRodriguez.create-flask-api-app/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Code Generators

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3
install_requires =
    flask
    SQLAlchemy

[options.packages.find]
where = src